apps/vcluster-kf2/overlays/ops/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: vcluster-ingress
  namespace: vcluster-kf2
spec:
  ingressClassName: nginx
  rules:
  - host: "kf2.k.unset-127-0-0-1.nip.io" # kpt-set: kf2.k.${host}
    http:
      paths:
      - backend:
          service:
            name: vcluster-kf2
            port:
              number: 443
        path: /
        pathType: ImplementationSpecific
