apps/vcluster-kf2/overlays/ops/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vcluster
  namespace: vcluster-kf
  annotations:
    link.argocd.argoproj.io/external-link: https://kf.k.unset-127-0-0-1.nip.io # kpt-set: https://kf.k.${host}
spec:
  hosts:
    - "kf.k.unset-127-0-0-1.nip.io" # kpt-set: kf.k.${host}
  gateways:
    - istio-system/istio-ingressgateway
  tls:
    - match:
        - sniHosts:
            - "kf.k.unset-127-0-0-1.nip.io" # kpt-set: kf.k.${host}
      route:
        - destination:
            host: vcluster-kf.vcluster-kf.svc.cluster.local
            port:
              number: 443
